err/flask-dmango.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Dmango-0.0.7.egg-info'...
Listing './lib/python3.5/site-packages/Flask_PyMongo-0.5.1.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_dmango'...
Compiling './lib/python3.5/site-packages/flask_dmango/dmango.py'...
***   File "./lib/python3.5/site-packages/flask_dmango/dmango.py", line 64
    print '[DMANGO] restfulAPI loading...'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/flask_dmango/mongodb_helpers.py'...
***   File "./lib/python3.5/site-packages/flask_dmango/mongodb_helpers.py", line 284
    print b
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/flask_dmango/query'...
Compiling './lib/python3.5/site-packages/flask_dmango/query/fields.py'...
***   File "./lib/python3.5/site-packages/flask_dmango/query/fields.py", line 163
    print ">>>>> to_cast : start "
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/flask_dmango/templates'...
Listing './lib/python3.5/site-packages/flask_dmango/templates/admin'...
Listing './lib/python3.5/site-packages/flask_dmango/templates/dmango'...
Listing './lib/python3.5/site-packages/flask_dmango/view'...
Compiling './lib/python3.5/site-packages/flask_dmango/view/view_decorators.py'...
***   File "./lib/python3.5/site-packages/flask_dmango/view/view_decorators.py", line 24
    print ' * View Decorators Register : name=%s, function=%s' % (name , str(f))
                                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_pymongo'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/sample'...
Compiling './lib/python3.5/site-packages/sample/blueprint_find.py'...
***   File "./lib/python3.5/site-packages/sample/blueprint_find.py", line 26
    print "-----------------------"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
